# red-book

./: .clang-format  .gitignore  CMakeLists.txt  README.md
chapter1/: CMakeLists.txt  double.c  hello.c
chapter1/example_1_2_hello/: hello.c
chapter1/example_1_3_double/: double.c
chapter2/: CMakeLists.txt  draw_elements.c  draw_elements_from_file.c  lines.c  polys.c  varray.c
chapter2/example_2_13_draw_elements/: draw_elements.c
chapter2/example_2_13_draw_elements_from_file/: draw_elements_from_file.c
chapter2/example_2_16_buffer_objects/: buffer_objects.c
chapter2/example_2_5_lines/: lines.c
chapter2/example_2_6_polys/: polys.c
chapter2/example_2_9_varray/: varray.c
chapter3/example_3_1_cube/: cube.c
chapter3/example_3_5_clip/: clip.c
red-book.xcodeproj/: project.pbxproj
